# NBAcharts

./: .gitignore  README.md  docker-compose-broker.yml  docker-compose-mysql.yml  docker-compose-producer.yml  docker-compose-worker.yml  env.example  pyproject.toml
airflow/: Dockerfile  docker-compose-airflow.yml
airflow/dags/: NBA_bigquery_dag.py  NBA_data_dag.py  NBA_news_dag.py
data_ingestion/: bigquery.py  config.py  dataprocess.py  mysql.py  nba_common.py  nba_news_headline.py  nba_news_udn.py  nba_players_salary.py  nba_players_state.py  nba_sync_mysql_to_bigquery.py  nba_teams_advance.py  nba_teams_salary.py  nba_teams_state.py  producer_crawler_player_salary.py  tasks_crawler_player_salary.py  worker.py
metabase/: docker-compose-metabase.yml
